# dominion

./: .gitignore  Dockerfile  README.md  dominion.cabal  stack.yaml
src/: Dominion.hs  Main.hs
src/Dominion/: Bots.hs  Cards.hs  Library.hs  Model.hs  Stats.hs
src/Dominion/Bots/: Default.hs  Strategies.hs  Util.hs
src/Dominion/Web/: JsonInstances.hs  Pages.hs
src/dart/: main.dart
src/hs/: Dominion.hs  Main.hs
src/hs/Dominion/: Bots.hs  Cards.hs  Model.hs
src/hs/Dominion/Bots/: Default.hs  Strategies.hs  Util.hs
src/hs/Dominion/Web/: JsonInstances.hs  Pages.hs
static/: site.css
static/js/: graph.js  play.js
test/: BotTest.hs  CardTests.hs  TestMain.hs  TestUtil.hs
