Name:                dominion
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          vmahrwald@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable dominion
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    aeson                     >= 0.7,
    array                     >= 0.5.1,
    MonadRandom               >= 0.4,
    random-shuffle            >= 0.0.4,
    -- for Data.Text
    text                      >= 1.1,
    fast-logger               >= 2.0,
    containers                >= 0.5.6,
    split                     >= 0.2.2,
    random                    >= 1.0,
    parsec                    >= 3.1.9,
    -- for Control.Monad.IO.Class
    transformers              >= 0.4.3.0

  -- TODO put -Wall back after fixing all the warnings
  ghc-options: -threaded -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-unused-do-bind -prof -fprof-auto
