Name:                dominion
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          vmahrwald@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.9.2

Executable dominion
  hs-source-dirs: src/hs
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    aeson                     >= 0.7,
    array                     >= 0.5.1,
    MonadRandom               >= 0.4,
    random-shuffle            >= 0.0.4,
    -- for Data.Text
    text                      >= 1.1,
    fast-logger               >= 2.0,
    containers                >= 0.5.6,
    split                     >= 0.2.2,
    random                    >= 1.0,
    parsec                    >= 3.1.9,
    blaze-markup              >= 0.7.0,
    blaze-html                >= 0.8.1.1,
    stm                       >= 2.4,
    scientific                >= 0.3.3,
    unordered-containers      >= 0.2.5,
    vector                    >= 0.11.0,
    -- for Control.Monad.IO.Class
    transformers              >= 0.4.2.0

  ghc-options: -threaded -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-unused-do-bind
               -Wall
               -fno-warn-missing-signatures
               -fno-warn-name-shadowing
               -fno-warn-orphans


Test-Suite dominion-tests
  type: exitcode-stdio-1.0
  main-is: TestMain.hs
  hs-source-dirs: src/hs, test
  ghc-options: -fno-warn-missing-fields
  build-depends: base,
    tasty >= 0.11.0,
    tasty-hunit >= 0.9,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    aeson                     >= 0.7,
    array                     >= 0.5.1,
    MonadRandom               >= 0.4,
    random-shuffle            >= 0.0.4,
    -- for Data.Text
    text                      >= 1.1,
    fast-logger               >= 2.0,
    containers                >= 0.5.6,
    split                     >= 0.2.2,
    random                    >= 1.0,
    parsec                    >= 3.1.9,
    -- for Control.Monad.IO.Class
    transformers              >= 0.4.2.0
